--- a/views/plants/edit.ejs
+++ b/views/plants/edit.ejs
@@ -6,78 +6,72 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>
-    <%= title %>
+    Edit Plant - <%= plant.name %>
   </title>
   <%- include('../partials/head') %>
 </head>
 
 <body>
-  <%- include('../partials/nav') %>
+  <%- include('../partials/nav', { user: user }) %>
 
-    <div class="container" id="bottomMargin">
-      <h1 class="center-align">
-        <%= plant.name %>
-      </h1>
-      <form action="/plants/<%= plant.id %>?_method=PUT" method="POST" style="display: inline">
+  <div class="container">
+    <h1 class="center-align">Edit Plant: <%= plant.name %></h1>
+    <div class="row">
+      <form action="/plants/<%= plant.id %>?_method=PUT" method="POST" class="col s12">
         <div class="row">
           <div class="input-field col s12">
             <input type="text" name="name" id="name" value="<%= plant.name %>" required>
-            <label for="name">Plant Name</label>
+            <label for="name" class="active">Plant Name</label>
           </div>
         </div>
-
         <div class="row">
           <div class="input-field col s12">
             <input type="text" name="propagation" id="propagation" value="<%= plant.propagation %>" required>
-            <label for="propagation">Propagation</label>
+            <label for="propagation" class="active">Propagation</label>
           </div>
         </div>
-
         <div class="row">
           <div class="input-field col s12">
             <input type="text" name="watering" id="watering" value="<%= plant.watering %>" required>
-            <label for="watering">Watering</label>
+            <label for="watering" class="active">Watering</label>
           </div>
         </div>
-
         <div class="row">
           <div class="input-field col s12">
             <input type="text" name="lighting" id="lighting" value="<%= plant.lighting %>" required>
-            <label for="lighting">Lighting</label>
+            <label for="lighting" class="active">Lighting</label>
           </div>
         </div>
-
         <div class="row">
           <div class="input-field col s12">
             <input type="text" name="soil" id="soil" value="<%= plant.soil %>" required>
-            <label for="soil">Soil</label>
+            <label for="soil" class="active">Soil</label>
           </div>
         </div>
-
         <div class="row">
           <div class="input-field col s12">
             <input type="text" name="care" id="care" value="<%= plant.care %>" required>
-            <label for="care">Care</label>
+            <label for="care" class="active">Care Instructions</label>
           </div>
         </div>
-
-        <div class="row left-align">
-          <div class="input-field">
-            <label for="coverImage">Image URL:</label>
-            <input type="url" name="coverImage" id="coverImage" value="<%= plant.coverImage %>"
-              placeholder="https://example.com/image.jpg">
+        <div class="row">
+          <div class="input-field col s12">
+            <input type="url" name="coverImage" id="coverImage" value="<%= plant.coverImage %>" placeholder="https://example.com/image.jpg">
+            <label for="coverImage" class="active">Image URL</label>
           </div>
         </div>
-
         <div class="row center-align">
-          <button type="submit" class="btn wave-effect waves-light teal">Update Plant</button>
+          <button type="submit" class="btn waves-effect teal darken-4">Update Plant</button>
+          <a href="/plants" class="btn waves-effect light-green lighten-3">Back</a>
+        </div>
       </form>
-
-      <a href="/plants" class="btn waves-effect light-green lighten-3">Back</a>
-      <form action="/plants/<%= plant.id %>?_method=DELETE" method="POST" style="display: inline">
-        <button type="submit" class="btn red darken-1">Delete Plant</button>
+      <form action="/plants/<%= plant.id %>?_method=DELETE" method="POST" style="margin-top: 20px;">
+        <div class="row center-align">
+          <button type="submit" class="btn red darken-1">Delete Plant</button>
+        </div>
       </form>
     </div>
+  </div>
 </body>
 
 </html>
