--- a/views/plants/show.ejs
+++ b/views/plants/show.ejs
@@ -40,7 +40,12 @@
 
     <div class="center-align" style="margin-top: 40px;">
       <a href="/plants" class="btn waves-effect light-green lighten-2">Return to Plants Page</a>
-      <a href="/plants/<%= plant.id %>/edit" class="btn waves-effect teal darken-4">Edit Plant</a>
+      <% if (plant.createdBy && plant.createdBy.equals(user._id)) { %>
+        <a href="/plants/<%= plant.id %>/edit" class="btn waves-effect teal darken-4">Edit Plant</a>
+        <form action="/plants/<%= plant.id %>?_method=DELETE" method="POST" style="display: inline;">
+          <button class="btn red darken-1">Delete Plant</button>
+        </form>
+      <% } %>
     </div>
   </div>
 </body>
