--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -20,4 +20,4 @@
 <!-- JavaScript for Materialize -->
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <!-- Additional Scripts -->
-<script defer src="/js/script.js"></script>
+<!-- <script defer src="/js/script.js"></script> -->
