--- a/views/plants/new.ejs
+++ b/views/plants/new.ejs
@@ -13,7 +13,7 @@
 <body>
   <%- include('../partials/nav', { user: user }) %>
 
-  <div class="container center-align" style="max-width: 800px; margin: auto;">
+  <div class="form-container center-align" style="max-width: 800px; margin: auto;">
     <h1>Add a New Plant</h1>
 
     <form action="/plants" method="POST" enctype="multipart/form-data" class="z-depth-2" style="padding: 20px; border-radius: 10px; background-color: #f9f9f9;">
