--- a/views/plants/edit.ejs
+++ b/views/plants/edit.ejs
@@ -17,7 +17,7 @@
   <div class="container">
     <h1 class="center-align">Edit Plant: <%= plant.name %></h1>
     <div class="row">
-      <form action="/plants/<%= plant._id %>?_method=PUT" method="POST" class="col s12">
+      <form action="/plants/<%= plant.id %>?_method=PUT" method="POST" class="col s12">
         <div class="row">
           <div class="input-field col s12">
             <input type="text" name="name" id="name" value="<%= plant.name %>" required>
@@ -65,7 +65,7 @@
           <a href="/plants" class="btn waves-effect light-green lighten-3">Back</a>
         </div>
       </form>
-      <form action="/plants/<%= plant.id %>?_method=DELETE" method="POST" style="margin-top: 20px;">
+      <form action="/plants/<%= plant._id %>?_method=DELETE" method="POST" style="margin-top: 20px;">
         <div class="row center-align">
           <button type="submit" class="btn red darken-1">Delete Plant</button>
         </div>
