--- a/views/plants/edit.ejs
+++ b/views/plants/edit.ejs
@@ -67,7 +67,7 @@
       </form>
       <form action="/plants/<%= plant._id %>?_method=DELETE" method="POST" style="margin-top: 20px;">
         <div class="row center-align">
-          <button type="submit" class="btn red darken-1">Delete Plant</button>
+          <button type="submit" class="btn red darken-1" onclick="return confirm('Are you sure you want to delete this plant?')">Delete Plant</button>
         </div>
       </form>
     </div>
