--- a/views/users/userPlants.ejs
+++ b/views/users/userPlants.ejs
@@ -1,3 +1,5 @@
+<!--views/users/userPlants.ejs-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,7 +12,7 @@
 
 <body>
   <%- include('../partials/nav', { user: user }) %>
-
+  <a href="/users" class="btn light-green lighten-2" style="margin-bottom: 20px;">Back to Users</a>
   <div class="container">
     <h1 class="center-align"><%= user.username %>'s Plants</h1>
     <% if (plants.length === 0) { %>
