--- a/views/plants/new.ejs
+++ b/views/plants/new.ejs
@@ -1,5 +1,3 @@
-<!--views/plants/new.ejs-->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,64 +11,58 @@
 <body>
   <%- include('../partials/nav', { user: user }) %>
 
-  <div class="form-container center-align" style="max-width: 800px; margin: auto;">
-    <h1>Add a New Plant</h1>
-
-    <form action="/plants" method="POST" enctype="multipart/form-data" class="z-depth-2" style="padding: 20px; border-radius: 10px; background-color: #f9f9f9;">
-      <div class="row">
-        <div class="input-field col s12">
-          <input type="text" name="name" id="name" required>
-          <label for="name">Plant Name</label>
+  <div class="container">
+    <h1 class="center-align">Add a New Plant</h1>
+    <div class="row">
+      <form action="/plants" method="POST" enctype="multipart/form-data" class="col s12">
+        <div class="row">
+          <div class="input-field col s12">
+            <input type="text" name="name" id="name" required>
+            <label for="name">Plant Name</label>
+          </div>
         </div>
-      </div>
-
-      <div class="row">
-        <div class="input-field col s12">
-          <input type="text" name="propagation" id="propagation" required>
-          <label for="propagation">Propagation</label>
+        <div class="row">
+          <div class="input-field col s12">
+            <input type="text" name="propagation" id="propagation" required>
+            <label for="propagation">Propagation</label>
+          </div>
         </div>
-      </div>
-
-      <div class="row">
-        <div class="input-field col s12">
-          <input type="text" name="watering" id="watering" required>
-          <label for="watering">Watering</label>
+        <div class="row">
+          <div class="input-field col s12">
+            <input type="text" name="watering" id="watering" required>
+            <label for="watering">Watering</label>
+          </div>
         </div>
-      </div>
-
-      <div class="row">
-        <div class="input-field col s12">
-          <input type="text" name="lighting" id="lighting" required>
-          <label for="lighting">Lighting</label>
+        <div class="row">
+          <div class="input-field col s12">
+            <input type="text" name="lighting" id="lighting" required>
+            <label for="lighting">Lighting</label>
+          </div>
         </div>
-      </div>
-
-      <div class="row">
-        <div class="input-field col s12">
-          <input type="text" name="soil" id="soil" required>
-          <label for="soil">Soil</label>
+        <div class="row">
+          <div class="input-field col s12">
+            <input type="text" name="soil" id="soil" required>
+            <label for="soil">Soil</label>
+          </div>
         </div>
-      </div>
-
-      <div class="row">
-        <div class="input-field col s12">
-          <input type="text" name="care" id="care" required>
-          <label for="care">Care</label>
+        <div class="row">
+          <div class="input-field col s12">
+            <input type="text" name="care" id="care" required>
+            <label for="care">Care Instructions</label>
+          </div>
         </div>
-      </div>
-
-      <div class="row left-align">
-        <div class="input-field col s12">
-          <input type="url" name="coverImage" id="coverImage" placeholder="https://example.com/image.jpg">
-          <label for="coverImage" class="active">Image URL</label>
+        <div class="row">
+          <div class="input-field col s12">
+            <input type="url" name="coverImage" id="coverImage" placeholder="https://example.com/image.jpg">
+            <label for="coverImage" class="active">Image URL</label>
+          </div>
         </div>
-      </div>
-
-      <div class="row center-align" style="margin-top: 20px;">
-        <button type="submit" class="btn waves-effect teal darken-4">Submit</button>
-        <a href="/plants" class="btn waves-effect light-green lighten-3">Back</a>
-      </div>
-    </form>
+        <div class="row center-align">
+          <button type="submit" class="btn waves-effect teal darken-4">Add Plant</button>
+          <a href="/plants" class="btn waves-effect light-green lighten-3">Back</a>
+        </div>
+      </form>
+    </div>
   </div>
 </body>
 
