add user community btn

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -18,6 +18,10 @@
         <a href="/plants" class="btn waves-effect">Go to Plants Page</a>
       </div>
       <div class="center-align" style="margin-top: 40px;">
+        <h4><a href="/users">Users</a>Green Community</h4>
+        <a href="/plants" class="btn waves-effect">Go to Plants Page</a>
+      </div>
+      <div class="center-align" style="margin-top: 40px;">
         <a href="/auth/sign-out" class="btn waves-effect">Sign out</a>
       </div>
     <% } else { %>
