--- a/views/plants/edit.ejs
+++ b/views/plants/edit.ejs
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>
-    Edit Plant - <%= plant.name %>
+    Edit Plant: <%= plant.name %>
   </title>
   <%- include('../partials/head') %>
 </head>
