--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -12,7 +12,6 @@
 
 <body>
   <%- include('../partials/nav', { user: user }) %>
-
   <div class="container">
     <h1 class="center-align">All Users</h1>
     <% if (users.length === 0) { %>
@@ -28,5 +27,8 @@
     <% } %>
   </div>
 </body>
+<footer>
+  <%- include('../partials/foot') %>
+</footer>
 
 </html>
